<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PolyglotFragment"-->
    <group
        android:checkableBehavior="single"
        android:visible="true">
        <item
            android:id="@+id/menu_begginer"
            android:checked="true"
            android:showAsAction="always|withText"
            android:title="@string/menu_begginer" />
        <item
            android:id="@+id/menu_knowing"
            android:showAsAction="always|withText"
            android:title="@string/menu_knowing" />
        <item
            android:id="@+id/menu_unstoppable"
            android:showAsAction="always|withText"
            android:title="@string/menu_unstoppable" />
    </group>
</menu>