<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PolyglotFragment">

    <item
        android:id="@+id/action_complexity"
        android:icon="@mipmap/ic_settings_black_24dp"
        android:orderInCategory="10"
        android:title="@string/action_complexity"
        android:visible="true"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_switch"
        android:icon="@mipmap/ic_3d_rotation_black_48dp"
        android:orderInCategory="20"
        android:title="@string/action_switch"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_close"
        android:icon="@mipmap/ic_close_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_closeApp"
        android:visible="true"
        app:showAsAction="never" />

</menu>